dark-crows/src/index.css
@import 'tailwindcss/base';

@import 'tailwindcss/components';

@import 'tailwindcss/utilities';

@tailwind base;
@tailwind components;
@tailwind utilities;

 :root {
  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
  line-height: 1.5;
  font-weight: 400;

  color-scheme: light;
  color: rgba(0, 0, 0, 0.87);
  background-color: #ffffff;

  font-synthesis: none;
  text-rendering: optimizeLegibility;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}



body {
  margin: 0;
  display: flex;
  flex-direction: column;
  place-items: center;
  justify-content: center;
  align-items: center;
  height: 100vh;

}

form {
  overflow: auto; 
}

h1 {
  font-size: 3.2em;
  font-weight: bolder;
} 


h2{
  font-size: 1.8em;
  font-style: italic;
} 

.generalButton {
  border-radius: 8px;
  border:none;
  outline:none;
  font-size: 1em;
  font-weight: 620;
  font-family: inherit;
  color:white;
  background-color: #28c95a;
  text-align: center;
  cursor: pointer;
  transition: border-color 0.25s;
}
.generalButton:hover {
  border-color: #33b1c7;
}

.loginContainer{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 100vh;

}

.login-form-container {
  position: fixed; 
  right: 0;
  margin:50px;
  background-color: white;
  border: 1px solid #ccc;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  border-radius: 0.5rem;
}

.login-image{
  width: 250px;
  object-fit: contain;
}

.register-image{
  width: 180px;
  object-fit: contain;
}


.login-non-form-container{
  position: fixed; 
  left: 0;
  margin:200px;
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  max-width: fit-content;
}

.login-text {
  font-size: 2.5em;
  font-weight: bold;
  color: #333;
  line-height: 1.5;
  text-align: center;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
}

.login-subtext {
  font-size: 1.5em;
  font-style:italic ;
  color: #333;
  line-height: 1.5;
  text-align: center;
  text-overflow: ellipsis;
  overflow: auto;
  white-space: wrap;
}

.register-form-container{
  height: 100vh;
}

.register-page-container{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
  margin:40px;
  padding:30px;
  height: 100vh;
}

.register-form-container {
  height:100vh;
  margin:50px;
  background-color: white;
  border: 1px solid #ccc;
  box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
  border-radius: 0.5rem;
}

.password-input-container{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}


.register-page-slider-container{
  display: flex;
  flex-direction: column;
  justify-content: space-between;
  align-items: center;
}

.uploaded-text{
  text-align: center;
  font-size: 1.5em;
  color: #28c95a;
}

.reg-form-container {
  padding: 70px;
  background-color: white;
  border: 1px solid #ccc;
  box-shadow: 10px 0 15px rgba(0, 0, 0, 0.35);
  border-radius: 0.5rem;
}

.reg-parent {
  /* display: flex;
  flex-direction: column; */
  margin-top: 30px;
  margin-bottom: 50px;
  gap: 20px;
}


@keyframes fadeIn {
  0% {opacity: 0;}
  100% {opacity: 1;}
}


.fade-in {
  animation: fadeIn 1.5s ease-in-out;
}

.text-focus-in{-webkit-animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both;animation:text-focus-in 1s cubic-bezier(.55,.085,.68,.53) both}


 @-webkit-keyframes puff-in-center{0%{-webkit-transform:scale(2);transform:scale(2);-webkit-filter:blur(4px);filter:blur(4px);opacity:0}100%{-webkit-transform:scale(1);transform:scale(1);-webkit-filter:blur(0);filter:blur(0);opacity:1}}@keyframes puff-in-center{0%{-webkit-transform:scale(2);transform:scale(2);-webkit-filter:blur(4px);filter:blur(4px);opacity:0}100%{-webkit-transform:scale(1);transform:scale(1);-webkit-filter:blur(0);filter:blur(0);opacity:1}}


 .landing-page-container{
  display: flex;
  flex-direction: column;
  margin-top: 10px;
  margin-bottom: 50px;
  gap: 10px;
  height: 100vh;
 }

